--- a/web/html/graph.html
+++ b/web/html/graph.html
@@ -338,62 +338,80 @@
 
                         <b class="arrow"></b>
 
-                        <ul class="submenu">
-                            <li class="">
-                                <a href="word_cloud.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Word Cloud
-                                </a>
+						<ul class="submenu">
+							<li class="">
+								<a href="nn.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Neural Network
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                            <li class="">
-                                <a href="image_tag.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Image Tagging
-                                </a>
+							<li class="">
+								<a href="nlp.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									NLP
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                            <li class="">
-                                <a href="ocr.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    OCR
-                                </a>
+							<li class="">
+								<a href="word_cloud.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Word Cloud
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                            <li class="">
-                                <a href="face.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Face Detection
-                                </a>
+							<li class="">
+								<a href="image_tag.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Image Tagging
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                            <li class="">
-                                <a href="speech.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Speech Recognition
-                                </a>
+							<li class="">
+								<a href="ocr.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									OCR
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                            <li class="">
-                                <a href="document.html">
-                                    <i class="menu-icon fa fa-caret-right"></i>
-                                    Text Categorization
-                                </a>
+							<li class="">
+								<a href="face.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Face Detection
+								</a>
 
-                                <b class="arrow"></b>
-                            </li>
+								<b class="arrow"></b>
+							</li>
 
-                        </ul>
+							<li class="">
+								<a href="speech.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Speech Recognition
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+							<li class="">
+								<a href="document.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Text Categorization
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+						</ul>
                     </li>
 
                 </ul><!-- /.nav-list -->
