--- a/web/html/image_tag.html
+++ b/web/html/image_tag.html
@@ -490,8 +490,8 @@
                                                     <div>
                                                         <select class="form-control" id="select-1" onchange="classifyImage()">
                                                             <option value=""></option>
-                                                            <option value="/data/sample/cat.jpg">/data/sample/cat.jpg</option>
-                                                            <option value="/data/sample/ad_sunglass.png">/data/sample/ad_sunglass.png</option>
+                                                            <option value="/sample/cat.jpg">/sample/cat.jpg</option>
+                                                            <option value="/sample/ad_sunglass.png">/sample/ad_sunglass.png</option>
                                                         </select>
                                                     </div>
                                                 </div>
