add document security menu

--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -387,13 +387,21 @@
                             <li class="">
                                 <a href="document.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    Document Categorization
+                                    Text Categorization
                                 </a>
 
                                 <b class="arrow"></b>
                             </li>
 
-                        </ul>
+							<li class="">
+								<a href="security.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Document Security
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+						</ul>
                     </li>
 
                 </ul><!-- /.nav-list -->
