--- a/web/html/flow.html
+++ b/web/html/flow.html
@@ -426,6 +426,14 @@
                         <b class="arrow"></b>
                     </li>
 
+                    <li class="">
+                        <a href="security.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Document Security
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
                 </ul>
             </li>
 
