--- a/web/html/graph.html
+++ b/web/html/graph.html
@@ -411,6 +411,14 @@
 								<b class="arrow"></b>
 							</li>
 
+							<li class="">
+								<a href="security.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Document Security
+								</a>
+
+								<b class="arrow"></b>
+							</li>
 						</ul>
                     </li>
 
