--- a/web/html/security.html
+++ b/web/html/security.html
@@ -315,7 +315,7 @@
                     </li>
 
                     <li class="">
-                        <a href="function.html" class="">
+                        <a href="#" class="">
                             <i class="menu-icon fa fa-square-o"></i>
                             <span class="menu-text"> Function </span>
 
@@ -343,7 +343,7 @@
                         <b class="arrow"></b>
 
                         <ul class="submenu">
-							<li class="active">
+							<li class="">
 								<a href="nn.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Neural Network
@@ -415,7 +415,7 @@
                                 <b class="arrow"></b>
                             </li>
 
-							<li class="">
+							<li class="active">
 								<a href="security.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Document Security
@@ -450,11 +450,11 @@
 					<ul class="breadcrumb">
 						<li>
 							<i class="ace-icon fa fa-home home-icon"></i>
-							<a href="#">Home</a>
+                            <a href="#">Home</a>
 						</li>
 
 						<li>
-							<a href="#">Neural Network</a>
+							<a href="#">Document Security</a>
 						</li>
 						<!--li class="active"></li-->
 					</ul><!-- /.breadcrumb -->
@@ -465,7 +465,7 @@
 					<div class="page-content-area">
 						<div class="page-header">
 							<h1>
-								Neural Network
+								Document Security
 								<small>
 									<i class="ace-icon fa fa-angle-double-right"></i>
 
@@ -473,20 +473,43 @@
 							</h1>
 						</div><!-- /.page-header -->
 
-						<div class="row">
-							<div class="col-xs-12">
-								<!-- PAGE CONTENT BEGINS -->
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <!-- PAGE CONTENT BEGINS -->
 								<div class="row">
-									<div class="col-xs-12">
-                                        <ol>
-                                            <li>Neural Network Visualization</li>
-                                            <pre>fab r.nn_visualize:/model/r/nn.train,y1~x1+x2+x3,6:12:8,/user/hadoop/nn.png</pre>
-                                            <img src="http://tip:14000/webhdfs/v1/user/hadoop/nn.png?user.name=hadoop&op=open">
-                                        </ol>
-									</div><!-- /.span -->
-								</div><!-- /.row -->
-							</div><!-- /.col -->
-						</div><!-- /.row -->
+									<div class="col-xs-12 col-sm-12">
+										<div class="widget-box">
+											<div class="widget-header">
+												<h4 class="widget-title">File</h4>
+
+                                                        <span class="widget-toolbar">
+                                                            <a href="#" data-action="collapse">
+																<i class="ace-icon fa fa-chevron-up"></i>
+															</a>
+
+                                                            <a href="#" data-action="close">
+																<i class="ace-icon fa fa-times"></i>
+															</a>
+                                                        </span>
+											</div>
+
+											<div class="widget-body">
+												<div class="widget-main">
+													<div>
+														<select class="form-control" id="select-1" onchange="classifyPDF()">
+															<option value=""></option>
+															<option value="/sample/normal.pdf">/sample/normal.pdf</option>
+															<option value="/sample/circuit.pdf">/sample/circuit.pdf</option>
+														</select>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- PAGE CONTENT ENDS -->
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
 					</div><!-- /.page-content-area -->
 				</div><!-- /.page-content -->
 			</div><!-- /.main-content -->
@@ -515,82 +538,31 @@
 		</script>
 		<script src="../assets/js/bootstrap.min.js"></script>
 
-		<!-- page specific plugin scripts -->
-		<script src="../assets/js/jquery.dataTables.min.js"></script>
-		<script src="../assets/js/jquery.dataTables.bootstrap.js"></script>
-
 		<!-- ace scripts -->
 		<script src="../assets/js/ace-elements.min.js"></script>
 		<script src="../assets/js/ace.min.js"></script>
 
 		<!-- inline scripts related to this page -->
-		<script type="text/javascript">
-			jQuery(function($) {
-				var oTable1 = 
-				$('#sample-table-2')
-				//.wrap("<div class='dataTables_borderWrap' />")   //if you are applying horizontal scrolling (sScrollX)
-				.dataTable( {
-					bAutoWidth: false,
-					"aoColumns": [
-					  { "bSortable": false },
-					  null, null,null, null, null,
-					  { "bSortable": false }
-					],
-					"aaSorting": [],
-			
-					//,
-					//"sScrollY": "200px",
-					//"bPaginate": false,
-			
-					//"sScrollX": "100%",
-					//"sScrollXInner": "120%",
-					//"bScrollCollapse": true,
-					//Note: if you are applying horizontal scrolling (sScrollX) on a ".table-bordered"
-					//you may want to wrap the table inside a "div.dataTables_borderWrap" element
-			
-					//"iDisplayLength": 50
-			    } );
-				/**
-				var tableTools = new $.fn.dataTable.TableTools( oTable1, {
-					"sSwfPath": "../../copy_csv_xls_pdf.swf",
-			        "buttons": [
-			            "copy",
-			            "csv",
-			            "xls",
-						"pdf",
-			            "print"
-			        ]
-			    } );
-			    $( tableTools.fnContainer() ).insertBefore('#sample-table-2');
-				*/
-			
-			
-				$(document).on('click', 'th input:checkbox' , function(){
-					var that = this;
-					$(this).closest('table').find('tr > td:first-child input:checkbox')
-					.each(function(){
-						this.checked = that.checked;
-						$(this).closest('tr').toggleClass('selected');
-					});
-				});
-			
-			
-				$('[data-rel="tooltip"]').tooltip({placement: tooltip_placement});
-				function tooltip_placement(context, source) {
-					var $source = $(source);
-					var $parent = $source.closest('table')
-					var off1 = $parent.offset();
-					var w1 = $parent.width();
-			
-					var off2 = $source.offset();
-					//var w2 = $source.width();
-			
-					if( parseInt(off2.left) < parseInt(off1.left) + parseInt(w1 / 2) ) return 'right';
-					return 'left';
-				}
-			
-			})
-		</script>
+        <script type="text/javascript">
+            function classifyPDF() {
+                var text = $('#targetText').val().replace(/['"\.,-\/#!$%\^&\*;:{}=\-_`~()\n]/g," ");
+				$('#top1').text('Precessing');
+                $.ajax({
+                    type: "GET",
+                    username:"hadoop",
+                    password:"tip",
+                    url:"http://hadoop:tip@tip:5555/api/v1/news.nb_predict/" + encodeURIComponent("/model/spark/news") + ",'" + encodeURIComponent(text) + "'",
+                    headers: {
+                        Authorization: "Basic " + btoa("hadoop:tip")
+                    }
+                }).done(function(json) {
+                    var result = json['result'].split('\n');
+                    $('#top1').text(result[0].substring(result[0].lastIndexOf(" "),result[0].length));
+                }).fail( function(xhr, textStatus, errorThrown) {
+                    alert(JSON.stringify(xhr));
+                });
+            }
+        </script>
 
 		<!-- the following scripts are used in demo only for onpage help and you don't need them -->
 		<link rel="stylesheet" href="../assets/css/ace.onpage-help.css" />
