--- a/web/html/security.html
+++ b/web/html/security.html
@@ -507,6 +507,50 @@
 										</div>
 									</div>
 								</div>
+
+                                <div class="row">               
+                                    <div class="col-xs-12">             
+                                        <ol>
+											<br>
+						<li>User Script
+                                            <pre>
+fab pdf.text:/sample/report.pdf,/tmp/extracted
+fab pdf.image:/sample/report.pdf,/tmp/extracted
+fab caffe.predict:/model/caffe/voc,/tmp/extracted-000.jpg,True,256:256,2:1:0,3</pre>
+<pre style="background-color:#38424a">
+chair 0.493845
+circuit 0.247732
+car 0.0570637</pre>
+						<li>Recognizable Images
+                        <div style="padding-left: 10px; ">
+                            <ul class="ace-thumbnails clearfix">
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000001.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000002.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000003.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000004.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000005.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000006.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000007.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000008.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000009.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000010.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000011.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000012.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000013.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000014.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000015.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000016.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000017.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000018.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000019.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000020.jpg?user.name=hadoop&op=open"/> </li>
+                                <li> <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/image/voc/circuit/00000021.jpg?user.name=hadoop&op=open"/> </li>
+			</ul>
+			<div>
+                                        </ol>
+                                    </div><!-- /.span -->               
+                                </div><!-- /.row -->            
+
 								<!-- PAGE CONTENT ENDS -->
                             </div><!-- /.col -->
                         </div><!-- /.row -->
