Change left-side menu order and indentation

--- a/web/html/ocr.html
+++ b/web/html/ocr.html
@@ -357,16 +357,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network
-                        </a>
-
-                        <b class="arrow"></b>
-                    </li>
-
-                    <li class="">
-                        <a href="nlp.html">
-                            <i class="menu-icon fa fa-caret-right"></i>
-                            NLP
+                            Neural Network  (R)
                         </a>
 
                         <b class="arrow"></b>
@@ -375,16 +366,16 @@
                     <li class="">
                         <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud
+                            Word Cloud (R + Spark)
                         </a>
 
                         <b class="arrow"></b>
                     </li>
 
                     <li class="">
-                        <a href="image_tag.html">
+                        <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging
+                            NLP (Spark)
                         </a>
 
                         <b class="arrow"></b>
@@ -393,7 +384,16 @@
                     <li class="active">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR
+                            OCR (Caffe + DIGITS)
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="image_tag.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Image Tagging (Caffe)
                         </a>
 
                         <b class="arrow"></b>
@@ -402,7 +402,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection
+                            Face Detection (TBD)
                         </a>
 
                         <b class="arrow"></b>
@@ -411,7 +411,7 @@
                     <li class="">
                         <a href="speech.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Speech Recognition
+                            Speech Recognition (TBD)
                         </a>
 
                         <b class="arrow"></b>
@@ -420,7 +420,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization
+                            Text Categorization (Spark)
                         </a>
 
                         <b class="arrow"></b>
@@ -429,7 +429,7 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security
+                            Document Security (Caffe + DIGITS)
                         </a>
 
                         <b class="arrow"></b>
@@ -760,7 +760,7 @@
     <!-- inline scripts related to this page -->
     <script type="text/javascript">
         function classifyImage(url) {
-            
+
             //$('#target_img').attr('src', "http://tip:14000/webhdfs/v1/sample/cat.jpg?user.name=hadoop&op=open");
             alert($('#target_img').attr('src'));
             $('#target_img').attr('src', $('#target_img').attr('src'));
