--- a/web/html/text.html
+++ b/web/html/text.html
@@ -351,18 +351,27 @@
 
                 <ul class="submenu">
                     <li class="">
-                        <a href="word_cloud.html">
+                        <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud
+                            Neural Network  (R)
                         </a>
 
                         <b class="arrow"></b>
                     </li>
 
                     <li class="">
-                        <a href="image_tag.html">
+                        <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging
+                            Word Cloud (R + Spark)
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="nlp.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            NLP (Spark)
                         </a>
 
                         <b class="arrow"></b>
@@ -371,7 +380,16 @@
                     <li class="">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR
+                            OCR (Caffe + DIGITS)
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="image_tag.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Image Tagging (Caffe)
                         </a>
 
                         <b class="arrow"></b>
@@ -380,7 +398,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection
+                            Face Detection (TBD)
                         </a>
 
                         <b class="arrow"></b>
@@ -389,7 +407,7 @@
                     <li class="">
                         <a href="speech.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Speech Recognition
+                            Speech Recognition (TBD)
                         </a>
 
                         <b class="arrow"></b>
@@ -398,7 +416,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization
+                            Text Categorization (Spark)
                         </a>
 
                         <b class="arrow"></b>
@@ -407,7 +425,7 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security
+                            Document Security (Caffe + DIGITS)
                         </a>
 
                         <b class="arrow"></b>
