--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -492,7 +492,7 @@
                 <div class="row">
                     <!-- PAGE CONTENT BEGINS -->
                     <div class="col-xs-12">
-                        <table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                        <table id="table1" class="table table-striped table-bordered table-hover">
                             <thead>
                             <tr>
                                 <th>Type</th>
@@ -583,6 +583,16 @@
 
 <!-- inline scripts related to this page -->
 <script type="text/javascript">
+    jQuery(function ($) {
+        $('#table1').dataTable({
+            bAutoWidth: false,
+            "aoColumns": [
+                null, null, null, null
+            ],
+            "aaSorting": [],
+        });
+    });
+
     jQuery(function ($) {
         var DataSourceTree = function (options) {
             this._data = options.data;
