--- a/web/html/flow.html
+++ b/web/html/flow.html
@@ -499,7 +499,7 @@
                         <!-- PAGE CONTENT BEGINS -->
                         <div class="row">
                             <div class="col-xs-12">
-                                <table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                                <table id="table1" class="table table-striped table-bordered table-hover">
                                     <thead>
                                     <tr>
                                         <th>Type</th>
@@ -516,12 +516,35 @@
 
                                     <tbody>
                                     <tr>
+                                        <td>PDF</td>
+                                        <td><a href="http://tip:1880/" target="_blank">Document Security Flow</a></td>
+                                        <td>0</td>
+                                        <td>Not Yet</td>
+                                        <td><span class="label label-sm label-info">New</span></td>
+                                        <td>Extract Text<br>
+                                            Morphological Analysis<br>
+                                            Named Entity Recognition<br>
+                                            Word2Vec<br>
+                                            Extract Image<br>
+                                            Image Tagging<br>
+                                            Rule-based Security Checking
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td>VIDEO</td>
-                                        <td><a href="http://tip:1880/" target="_blank">TED Flow</a></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td><a href="http://tip:1880/" target="_blank">TED Analysis Flow</a></td>
+                                        <td>0</td>
+                                        <td>Not Yet</td>
+                                        <td><span class="label label-sm label-info">New</span></td>
+                                        <td>Extract Key Frame Images<br>
+                                            Image Tagging<br>
+                                            Extract Audio<br>
+                                            Speech Recognition<br>
+                                            Extract Closed Caption<br>
+                                            Morphological Analysis<br>
+                                            Named Entity Recognition<br>
+                                            Indexing for Search
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -576,69 +599,13 @@
 <!-- inline scripts related to this page -->
 <script type="text/javascript">
     jQuery(function ($) {
-        var oTable1 =
-                $('#sample-table-2')
-                    //.wrap("<div class='dataTables_borderWrap' />")   //if you are applying horizontal scrolling (sScrollX)
-                        .dataTable({
-                            bAutoWidth: false,
-                            "aoColumns": [
-                                {"bSortable": false},
-                                null, null, null, null, null,
-                                {"bSortable": false}
-                            ],
-                            "aaSorting": [],
-
-                            //,
-                            //"sScrollY": "200px",
-                            //"bPaginate": false,
-
-                            //"sScrollX": "100%",
-                            //"sScrollXInner": "120%",
-                            //"bScrollCollapse": true,
-                            //Note: if you are applying horizontal scrolling (sScrollX) on a ".table-bordered"
-                            //you may want to wrap the table inside a "div.dataTables_borderWrap" element
-
-                            //"iDisplayLength": 50
-                        });
-        /**
-         var tableTools = new $.fn.dataTable.TableTools( oTable1, {
-					"sSwfPath": "../../copy_csv_xls_pdf.swf",
-			        "buttons": [
-			            "copy",
-			            "csv",
-			            "xls",
-						"pdf",
-			            "print"
-			        ]
-			    } );
-         $( tableTools.fnContainer() ).insertBefore('#sample-table-2');
-         */
-
-
-        $(document).on('click', 'th input:checkbox', function () {
-            var that = this;
-            $(this).closest('table').find('tr > td:first-child input:checkbox')
-                    .each(function () {
-                        this.checked = that.checked;
-                        $(this).closest('tr').toggleClass('selected');
-                    });
+        $('#table1').dataTable({
+            bAutoWidth: false,
+            "aoColumns": [
+                null, null, null, null, null, null
+            ],
+            "aaSorting": [],
         });
-
-
-        $('[data-rel="tooltip"]').tooltip({placement: tooltip_placement});
-        function tooltip_placement(context, source) {
-            var $source = $(source);
-            var $parent = $source.closest('table')
-            var off1 = $parent.offset();
-            var w1 = $parent.width();
-
-            var off2 = $source.offset();
-            //var w2 = $source.width();
-
-            if (parseInt(off2.left) < parseInt(off1.left) + parseInt(w1 / 2)) return 'right';
-            return 'left';
-        }
-
     })
 </script>
 
