--- a/web/html/image.html
+++ b/web/html/image.html
@@ -492,7 +492,7 @@
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                        <table id="table1" class="table table-striped table-bordered table-hover">
                             <thead>
                             <tr>
                                 <th>Type</th>
@@ -584,59 +584,13 @@
 <!-- inline scripts related to this page -->
 <script type="text/javascript">
     jQuery(function ($) {
-        var oTable1 =
-                $('#sample-table-2')
-                    //.wrap("<div class='dataTables_borderWrap' />")   //if you are applying horizontal scrolling (sScrollX)
-                        .dataTable({
-                            bAutoWidth: false,
-                            "aoColumns": [
-                                {"bSortable": false},
-                                null, null, null, null, null,
-                                {"bSortable": false}
-                            ],
-                            "aaSorting": [],
-
-                            //,
-                            //"sScrollY": "200px",
-                            //"bPaginate": false,
-
-                            //"sScrollX": "100%",
-                            //"sScrollXInner": "120%",
-                            //"bScrollCollapse": true,
-                            //Note: if you are applying horizontal scrolling (sScrollX) on a ".table-bordered"
-                            //you may want to wrap the table inside a "div.dataTables_borderWrap" element
-
-                            //"iDisplayLength": 50
-                        });
-        /**
-         var tableTools = new $.fn.dataTable.TableTools( oTable1, {
-					"sSwfPath": "../../copy_csv_xls_pdf.swf",
-			        "buttons": [
-			            "copy",
-			            "csv",
-			            "xls",
-						"pdf",
-			            "print"
-			        ]
-			    } );
-         $( tableTools.fnContainer() ).insertBefore('#sample-table-2');
-         */
-
-
-        $('[data-rel="tooltip"]').tooltip({placement: tooltip_placement});
-        function tooltip_placement(context, source) {
-            var $source = $(source);
-            var $parent = $source.closest('table')
-            var off1 = $parent.offset();
-            var w1 = $parent.width();
-
-            var off2 = $source.offset();
-            //var w2 = $source.width();
-
-            if (parseInt(off2.left) < parseInt(off1.left) + parseInt(w1 / 2)) return 'right';
-            return 'left';
-        }
-
+        $('#table1').dataTable({
+            bAutoWidth: false,
+            "aoColumns": [
+                null, null, null, null
+            ],
+            "aaSorting": [],
+        });
     })
 </script>
 
