Set table cell alignment

--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -31,6 +31,15 @@
     <![endif]-->
 
     <!-- inline styles related to this page -->
+    <style type="text/css">
+        tr td:nth-child(3) {
+            text-align: right
+        }
+
+        tr td:nth-child(4) {
+            text-align: right
+        }
+    </style>
 
     <!-- ace settings handler -->
     <script src="../assets/js/ace-extra.min.js"></script>
@@ -353,7 +362,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network (R)
                         </a>
 
                         <b class="arrow"></b>
