--- a/web/html/function.html
+++ b/web/html/function.html
@@ -31,6 +31,17 @@
     <![endif]-->
 
     <!-- inline styles related to this page -->
+    <style type="text/css">
+        tr td:nth-child(3) {
+            text-align: right
+        }
+        tr td:nth-child(4) {
+            text-align: center
+        }
+        tr td:nth-child(5) {
+            text-align: center
+        }
+    </style>
 
     <!-- ace settings handler -->
     <script src="../assets/js/ace-extra.min.js"></script>
