--- a/web/html/text.html
+++ b/web/html/text.html
@@ -31,6 +31,14 @@
     <![endif]-->
 
     <!-- inline styles related to this page -->
+    <style type="text/css">
+        tr td:nth-child(3) {
+            text-align: right
+        }
+        tr td:nth-child(4) {
+            text-align: right
+        }
+    </style>
 
     <!-- ace settings handler -->
     <script src="../assets/js/ace-extra.min.js"></script>
@@ -639,7 +647,7 @@
             ],
             "aaSorting": [],
         });
-    })
+    });
 </script>
 
 <!-- the following scripts are used in demo only for onpage help and you don't need them -->
