--- a/web/html/nn.html
+++ b/web/html/nn.html
@@ -357,7 +357,7 @@
                     <li class="active">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network (R)
                         </a>
 
                         <b class="arrow"></b>
@@ -499,11 +499,13 @@
                         <!-- PAGE CONTENT BEGINS -->
                         <div class="row">
                             <div class="col-xs-12">
-                                <ol>
-                                    <li>Neural Network Visualization</li>
+                                <h4>1. Neural Network Visualization</h4>
+
+                                <div style="padding-left: 20px">
                                     <pre>fab r.nn_visualize:/model/r/nn.train,y1~x1+x2+x3,6:12:8,/user/hadoop/nn.png</pre>
-                                    <img src="http://tip:14000/webhdfs/v1/user/hadoop/nn.png?user.name=hadoop&op=open">
-                                </ol>
+                                    <img src="http://tip:14000/webhdfs/v1/user/hadoop/nn.png?user.name=hadoop&op=open"
+                                         width="60%">
+                                </div>
                             </div>
                             <!-- /.span -->
                         </div>
