--- a/web/html/word_cloud.html
+++ b/web/html/word_cloud.html
@@ -357,7 +357,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network (R)
                         </a>
 
                         <b class="arrow"></b>
@@ -499,13 +499,18 @@
                         <!-- PAGE CONTENT BEGINS -->
                         <div class="row">
                             <div class="col-xs-12">
-                                <ol>
-                                    <li>Korean Term Frequency</li>
+                                <h4>1. Korean Term Frequency (Spark)</h4>
+
+                                <div style="padding-left: 20px">
                                     <pre>fab spark.tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result</pre>
-                                    <li>Word Cloud for Top 100</li>
+                                </div>
+
+                                <h4>2. Word Cloud for Top 100 Term (R)</h4>
+
+                                <div style="padding-left: 20px">
                                     <pre>fab r.word_cloud:/user/hadoop/tf_result/part-00000,100,/user/hadoop/wordcloud.png</pre>
                                     <img src="http://tip:14000/webhdfs/v1/user/hadoop/wordcloud.png?user.name=hadoop&op=open">
-                                </ol>
+                                </div>
                             </div>
                             <!-- /.span -->
                         </div>
@@ -556,71 +561,6 @@
 
 <!-- inline scripts related to this page -->
 <script type="text/javascript">
-    jQuery(function ($) {
-        var oTable1 =
-                $('#sample-table-2')
-                    //.wrap("<div class='dataTables_borderWrap' />")   //if you are applying horizontal scrolling (sScrollX)
-                        .dataTable({
-                            bAutoWidth: false,
-                            "aoColumns": [
-                                {"bSortable": false},
-                                null, null, null, null, null,
-                                {"bSortable": false}
-                            ],
-                            "aaSorting": [],
-
-                            //,
-                            //"sScrollY": "200px",
-                            //"bPaginate": false,
-
-                            //"sScrollX": "100%",
-                            //"sScrollXInner": "120%",
-                            //"bScrollCollapse": true,
-                            //Note: if you are applying horizontal scrolling (sScrollX) on a ".table-bordered"
-                            //you may want to wrap the table inside a "div.dataTables_borderWrap" element
-
-                            //"iDisplayLength": 50
-                        });
-        /**
-         var tableTools = new $.fn.dataTable.TableTools( oTable1, {
-					"sSwfPath": "../../copy_csv_xls_pdf.swf",
-			        "buttons": [
-			            "copy",
-			            "csv",
-			            "xls",
-						"pdf",
-			            "print"
-			        ]
-			    } );
-         $( tableTools.fnContainer() ).insertBefore('#sample-table-2');
-         */
-
-
-        $(document).on('click', 'th input:checkbox', function () {
-            var that = this;
-            $(this).closest('table').find('tr > td:first-child input:checkbox')
-                    .each(function () {
-                        this.checked = that.checked;
-                        $(this).closest('tr').toggleClass('selected');
-                    });
-        });
-
-
-        $('[data-rel="tooltip"]').tooltip({placement: tooltip_placement});
-        function tooltip_placement(context, source) {
-            var $source = $(source);
-            var $parent = $source.closest('table')
-            var off1 = $parent.offset();
-            var w1 = $parent.width();
-
-            var off2 = $source.offset();
-            //var w2 = $source.width();
-
-            if (parseInt(off2.left) < parseInt(off1.left) + parseInt(w1 / 2)) return 'right';
-            return 'left';
-        }
-
-    })
 </script>
 
 <!-- the following scripts are used in demo only for onpage help and you don't need them -->
